Fix up wording on 404-page

--- a/404.md
+++ b/404.md
@@ -1,7 +1,10 @@
 ---
 layout: default
+permalink: /404.html
+title: Page not found
 ---
 
-## No such thing as that, sorry
+# Requested page was not found
 
-Page Not Found.
+My name is Kim, and this is my website. You tried to view a page that unfortunately
+does not exist. Please go to [Home](/) and try again.
